# MooseVideo

./: README.md  settings.gradle
RangeSeekBar/: build.gradle
app/: build.gradle
app/src/androidTest/java/com/zdh/moosevideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zdh/moosevideo/: CameraHelper.java  CameraXHelper.java  ImageUtil.java  MooseSurfaceView.java
app/src/main/res/layout/: activity_audio_clip.xml  activity_camera2.xml  activity_main.xml  activity_merge_video.xml  activity_play.xml  activity_projection_live.xml  activity_video_clip.xml  activity_x264.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zdh/moosevideo/: ExampleUnitTest.java
clipSupport/: build.gradle
clipSupport/src/androidTest/java/com/zdh/musicsupport/: ExampleInstrumentedTest.java
clipSupport/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
h264Support/: build.gradle
h264Support/src/main/: AndroidManifest.xml
h265Support/: build.gradle
h265Support/src/main/: AndroidManifest.xml
live/: build.gradle
live/src/main/: AndroidManifest.xml
live/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  LOG.h  VideoChannel.cpp  VideoChannel.h  X264Push.cpp  live.cpp
live/src/main/cpp/librtmp/: CMakeLists.txt
live/src/main/cpp/x264/arm64-v8a/lib/pkgconfig/: x264.pc
mediaCodec/: build.gradle
mediaCodec/src/main/: AndroidManifest.xml
(+41 files in other folders)
